--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -27,8 +27,9 @@
     font-weight: 300;
 }
 
-.footer-contacts{
+.footer-contacts {
     margin-bottom: 20px;
+    list-style: none;
 }
 
 .footer-padding {
@@ -54,12 +55,18 @@
     text-decoration: none;
 }
 
-.footer-help-bottom{
+.footer-help-bottom {
     margin-bottom: 20px;
+    list-style: none;
 }
 
-.footer-contact-bottom{
+.footer-contact-down {
+    list-style: none;
+}
+
+.footer-contact-bottom {
     margin-bottom: -15px;
+    list-style: none;
 }
 
 .footer-link-help {
@@ -89,4 +96,109 @@
 .footer-right {
     gap: 30px;
     display: flex
+}
+
+
+// телефон
+
+@media screen and (max-width: 768px) {
+    .footer {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #705A66;
+    }
+
+    .footer-contact {
+        font-family: "Montserrat", sans-serif;
+        color: #F5F7F8;
+        font-size: 18px;
+        line-height: 24px;
+        display: flex;
+        flex-direction: column;
+        margin-left: 100px;
+        margin-top: 88px;
+        margin-bottom: -3px;
+        text-decoration: none;
+    }
+
+    .footer-contact-link {
+        text-decoration: none;
+        padding-bottom: 24px;
+        color: #F5F7F8;
+        font-size: 18px;
+        line-height: 24px;
+        font-weight: 300;
+    }
+
+    .footer-contacts {
+        margin-bottom: 20px;
+        list-style: none;
+    }
+
+    .footer-padding {
+        padding-bottom: 0px;
+    }
+
+    .footer-photo {
+        display: flex;
+        // position: absolute;
+        gap: 40px;
+        // margin-left: 944px;
+        margin-top: -48px;
+    }
+
+    .footer-help {
+        font-family: "Montserrat", sans-serif;
+        display: flex;
+        flex-direction: column;
+        // margin-top: 32px;
+        color: #F5F7F8;
+        line-height: 24px;
+        font-size: 18px;
+        text-decoration: none;
+    }
+
+    .footer-help-bottom {
+        margin-bottom: 20px;
+        list-style: none;
+    }
+
+    .footer-contact-down {
+        list-style: none;
+    }
+
+    .footer-contact-bottom {
+        margin-bottom: -15px;
+        list-style: none;
+    }
+
+    .footer-link-help {
+        padding-bottom: 24px;
+        text-decoration: none;
+        color: #F5F7F8;
+        line-height: 24px;
+        font-size: 18px;
+        font-weight: 300;
+    }
+
+    .footer-help-padding {
+        padding-bottom: 0px;
+    }
+
+    .footer-title {
+        margin-left: 490px;
+        margin-top: -190px;
+    }
+
+    .footer-right-photo {
+        position: absolute;
+        margin-left: 944px;
+        margin-top: -124px;
+    }
+
+    .footer-right {
+        gap: 30px;
+        display: flex
+    }
 }
