--- a/sass/components/_galery.scss
+++ b/sass/components/_galery.scss
@@ -67,3 +67,81 @@
     margin-top: -78px;
     margin-left: 386px;
 }
+
+
+// телефон
+
+@media screen and (max-width: 768px) {
+    .galery-photo {
+        list-style: none;
+    }
+
+    .galery-img {
+        margin-left: 13px;
+        width: 307px;
+        height: auto;
+    }
+
+
+    .thumb {
+        position: relative;
+        margin: 10px;
+        border-radius: 4px;
+        overflow: hidden;
+        background-color: #fff;
+    }
+
+    .thumb>.label-list {
+        bottom: -37;
+        position: absolute;
+        top: 0;
+        right: 0;
+        padding: 14px 97px;
+        border-bottom-left-radius: 4px;
+        line-height: 32px;
+        font-family: "Montserrat", sans-serif;
+        font-size: 24px;
+        background-color: #F5EEE0;
+        color: #705A66;
+        text-align: center;
+
+    }
+
+    .galery-name {
+        margin-left: -67px;
+        width: 355px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        flex-basis: calc(50% - 10px);
+    }
+
+    .galery-btn {
+        height: 67px;
+        border-radius: 25px;
+        display: flex;
+        margin-left: 29px;
+        width: 276px;
+        margin-top: -46px;
+        position: relative;
+        font-family: "Montserrat", sans-serif;
+        font-size: 24px;
+        background-color: #F5EEE0;
+        color: #705A66;
+        text-align: center;
+    }
+
+    .label-list {
+        margin-left: 100px;
+    }
+
+    .galery-btn-arrow {
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: -65px;
+        margin-left: 253px;
+    }
+}
