--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,3 +16,6 @@
 @import './components/footer';
 @import './components/catalog/catalog';
 @import './components/product/napoleon';
+@import './components/card/card';
+@import './components/information/information';
+@import './components/product/thankYou/thank';
