--- a/sass/components/_main.scss
+++ b/sass/components/_main.scss
@@ -94,3 +94,212 @@
 .custom-shape-divider-top-1759830817 .shape-fill {
     fill: #F5EEE0;
 }
+
+
+// телефон
+
+@media screen and (max-width: 768px) {
+    .main {
+        background-color: #F5EEE0;
+        border-bottom: 5px solid rgb(255, 0, 0);
+        border: 1px solid white;
+        padding-bottom: 120px;
+        height: 667px;
+
+    }
+
+    .container-main {
+        height: 888px;
+    }
+
+    .main-title {
+        width: 315px;
+        font-family: "Montserrat", sans-serif;
+        color: #705A66;
+        text-align: center;
+        font-size: 45px;
+        line-height: 80px;
+        font-weight: 600;
+        margin-top: 0px;
+    }
+
+    .main-title-h1 {
+        width: 315px;
+        font-family: "Montserrat", sans-serif;
+        color: #705A66;
+        text-align: center;
+        font-size: 65px;
+        line-height: 80px;
+        font-weight: 600;
+        margin-top: 0px;
+    }
+
+    .pudding {
+        width: 107px;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 488px;
+        margin-left: -9px;
+    }
+
+    .cakes {
+        position: relative;
+        margin-left: -153px;
+        margin-top: -709px;
+        z-index: 5;
+        visibility: hidden;
+    }
+
+    .hardening {
+        width: 105px;
+        margin-bottom: 329px;
+        margin-left: -17px;
+    }
+
+    .circlet {
+        margin-bottom: 372px;
+        margin-left: -6px;
+        width: 132px;
+    }
+
+    .contact {
+        width: 25px;
+        height: 25px;
+
+    }
+
+    .vraper-social {
+        display: flex;
+        margin-top: -474px;
+        margin-left: 833px;
+
+    }
+
+    .social-list {
+        list-style: none;
+        flex-direction: column;
+        display: flex;
+        gap: 20px;
+        visibility: hidden;
+    }
+
+    .main-description-social {
+        font-family: "Montserrat", sans-serif;
+        color: #705A66;
+        font-size: 16px;
+        width: 190px;
+        margin-left: -832px;
+        margin-top: 105px;
+    }
+
+    .custom-shape-divider-top-1759830817 {
+        margin-top: -1px;
+        position: static;
+        top: 0;
+        left: 0;
+        width: 100%;
+        overflow: hidden;
+        line-height: 0;
+        transform: rotate(180deg);
+    }
+
+    .custom-shape-divider-top-1759830817 svg {
+        position: relative;
+        display: block;
+        width: calc(127% + 1.3px);
+        height: 316px;
+        transform: rotateY(180deg);
+    }
+
+    .custom-shape-divider-top-1759830817 .shape-fill {
+        fill: #F5EEE0;
+    }
+}
+
+
+.page-header {
+    box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%),
+        0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
+}
+
+@media (max-width: 767px) {
+    .menu {
+        display: none;
+    }
+}
+
+.menu .link {
+    padding: 10px;
+    color: inherit;
+    text-decoration: none;
+}
+
+.menu .link:hover,
+.menu .link:focus {
+    text-decoration: underline;
+}
+
+.menu-toggle {
+    min-height: 40px;
+    min-width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    margin: 0;
+    padding: 0;
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+    border-radius: 50%;
+    outline: none;
+}
+
+@media (min-width: 768px) {
+    .menu-toggle {
+        display: none;
+    }
+}
+
+.menu-toggle:hover,
+.menu-toggle:focus {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+.menu-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 87vw;
+    height: 100vh;
+    padding: 32px;
+    background-color: #3f51b5;
+    z-index: 999;
+
+    transform: translateX(100%);
+    transition: transform 250ms ease-in-out;
+}
+
+.menu-container.is-open {
+    transform: translateX(0);
+}
+
+.menu-container .menu-toggle {
+    position: absolute;
+    top: 16px;
+    right: 16px;
+    color: #fff;
+}
+
+.mobile-menu {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.mobile-menu .link {
+    display: block;
+    padding: 10px;
+    color: #fff;
+    text-decoration: none;
+}
