--- a/sass/components/_svg.scss
+++ b/sass/components/_svg.scss
@@ -1,17 +1,7 @@
-// body {
-//     margin: 0;
-//     min-height: 100vh;
-//     display: flex;
-//     flex-direction: column;
-//     align-items: center;
-//     justify-content: center;
-// }
-
 .icon-list {
     padding: 0;
     margin: 0;
     list-style: none;
-    //  color: #705A66;
 }
 
 .icon {
@@ -27,4 +17,30 @@
 .icon-card {
     width: 25px;
     fill: #705A66;
+}
+
+
+// телефон
+
+@media screen and (max-width: 768px) {
+    .icon-list {
+        padding: 0;
+        margin: 0;
+        list-style: none;
+    }
+
+    .icon {
+        width: 25px;
+        fill: #705A66;
+        margin-left: -250px;
+    }
+
+    .icon:hover {
+        fill: #03a9f4;
+    }
+
+    .icon-card {
+        width: 25px;
+        fill: #705A66;
+    }
 }
