--- a/sass/components/product/_napoleon.scss
+++ b/sass/components/product/_napoleon.scss
@@ -31,6 +31,7 @@
 
 .container-product {
     display: flex;
+
 }
 
 .product-name {
@@ -56,15 +57,17 @@
 }
 
 .product-btn {
+    border: none;
     border-radius: 10px;
-    width: 240px;
+    width: 288px;
     height: 50px;
     font-family: "Montserrat", sans-serif;
     font-size: 18px;
     line-height: 24px;
     background-color: #F5EEE0;
     color: #705A66;
-    padding-left: 30px;
+    // padding-left: 30px;
+    padding-right: 32px;
 }
 
 .product-btn-order {
@@ -81,7 +84,7 @@
 .product-order-text {
     display: flex;
     width: 518px;
-    border: 1px solid red;
+    // border: 1px solid red;
     margin-top: 48px;
     margin-left: 35px;
     justify-content: space-between;
@@ -89,14 +92,14 @@
 }
 
 .product-text {
-    border: 1px solid red;
+    // border: 1px solid red;
     font-family: "Montserrat", sans-serif;
     font-size: 24px;
     color: #705A66;
 }
 
 .product-text-sale {
-    border: 1px solid red;
+    // border: 1px solid red;
     font-family: "Montserrat", sans-serif;
     font-size: 24px;
     color: #705A66;
@@ -139,4 +142,253 @@
 .product-img {
     display: flex;
     flex-direction: column;
+}
+
+.product-description {
+    display: flex;
+    flex-direction: column;
+
+}
+
+.product-description-btn {
+    display: flex;
+    gap: 96px;
+    // border-bottom: 3px solid #F5EEE0;
+}
+
+.product-btn-text {
+    font-family: "Montserrat", sans-serif;
+    color: #705A66;
+    background: none;
+    border: none;
+    font-size: 24px;
+    line-height: 32px;
+    cursor: pointer;
+    position: relative;
+    background-color: #F5F7F8;
+}
+
+.product-text-description {
+    margin-top: 40px;
+    width: 497px;
+    font-family: "Montserrat", sans-serif;
+    color: #705A66;
+    line-height: 24px;
+    font-size: 18px;
+}
+
+.product-title-h2 {
+    font-weight: 400;
+    font-family: "Montserrat", sans-serif;
+    color: #705A66;
+    font-size: 42px;
+    line-height: 48px;
+}
+
+.product-bg {
+    background-color: #F5F7F8;
+}
+
+.product-href {
+    text-decoration: none;
+}
+
+
+// телефон
+
+@media screen and (max-width: 768px) {
+    .switch {
+        display: flex;
+        list-style: none;
+    }
+
+    .product-switch {
+        text-decoration: none;
+        font-family: "Montserrat", sans-serif;
+        color: #705A66;
+        font-size: 16px;
+        line-height: 22px;
+    }
+
+    .product-title {
+        font-family: "Montserrat", sans-serif;
+        color: #705A66;
+        font-size: 42px;
+        line-height: 48px;
+        font-weight: 500;
+        display: flex;
+        align-items: flex-end;
+        justify-content: flex-end;
+    }
+
+    .product-order {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-left: 32px;
+    }
+
+    .container-product {
+        display: flex;
+
+    }
+
+    .product-name {
+        font-family: "Montserrat", sans-serif;
+        color: #705A66;
+        line-height: 24px;
+        font-size: 18px;
+        margin-left: -274px;
+        list-style: circle;
+    }
+
+    .product-btn-title {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        max-width: 500px;
+        margin-left: 14px;
+    }
+
+    .product-row {
+        display: flex;
+        gap: 16px;
+    }
+
+    .product-btn {
+        border: none;
+        border-radius: 10px;
+        width: 288px;
+        height: 50px;
+        font-family: "Montserrat", sans-serif;
+        font-size: 18px;
+        line-height: 24px;
+        background-color: #F5EEE0;
+        color: #705A66;
+        // padding-left: 30px;
+        padding-right: 32px;
+    }
+
+    .product-btn-order {
+        font-family: "Montserrat", sans-serif;
+        line-height: 32px;
+        font-size: 24px;
+        background-color: #705A66;
+        color: #F5EEE0;
+        border-radius: 10px;
+        border: 1px solid white;
+        padding: 13px 50px 13px 50px;
+    }
+
+    .product-order-text {
+        display: flex;
+        width: 518px;
+        // border: 1px solid red;
+        margin-top: 48px;
+        margin-left: 35px;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .product-text {
+        // border: 1px solid red;
+        font-family: "Montserrat", sans-serif;
+        font-size: 24px;
+        color: #705A66;
+    }
+
+    .product-text-sale {
+        // border: 1px solid red;
+        font-family: "Montserrat", sans-serif;
+        font-size: 24px;
+        color: #705A66;
+        margin-left: -140px;
+    }
+
+
+    .product-switch {
+        display: flex;
+        align-items: center;
+        // justify-content: center;
+        gap: 34px;
+        font-family: "Montserrat", sans-serif;
+        margin-left: 35px;
+        margin-top: 32px;
+    }
+
+    .product-page,
+    .product-nav {
+        color: #705A66;
+        text-decoration: none;
+        font-size: 24px;
+        line-height: 32px;
+        border: none;
+        cursor: pointer;
+    }
+
+
+    .product-nav {
+        width: 35px;
+        height: 35px;
+        background-color: #705A66;
+        border-radius: 50%;
+        color: white;
+        font-size: 24px;
+        display: flex;
+        justify-content: center;
+    }
+
+    .product-img {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .product-description {
+        display: flex;
+        flex-direction: column;
+
+    }
+
+    .product-description-btn {
+        display: flex;
+        gap: 96px;
+        // border-bottom: 3px solid #F5EEE0;
+    }
+
+    .product-btn-text {
+        font-family: "Montserrat", sans-serif;
+        color: #705A66;
+        background: none;
+        border: none;
+        font-size: 24px;
+        line-height: 32px;
+        cursor: pointer;
+        position: relative;
+        background-color: #F5F7F8;
+    }
+
+    .product-text-description {
+        margin-top: 40px;
+        width: 497px;
+        font-family: "Montserrat", sans-serif;
+        color: #705A66;
+        line-height: 24px;
+        font-size: 18px;
+    }
+
+    .product-title-h2 {
+        font-weight: 400;
+        font-family: "Montserrat", sans-serif;
+        color: #705A66;
+        font-size: 42px;
+        line-height: 48px;
+    }
+
+    .product-bg {
+        background-color: #F5F7F8;
+    }
+
+    .product-href {
+        text-decoration: none;
+    }
 }
